--- a/resources/workspaces/batcave/batcave.yaml
+++ b/resources/workspaces/batcave/batcave.yaml
@@ -1,12 +1,13 @@
+---
 apiVersion: workspaces.kommander.mesosphere.io/v1alpha1
 kind: Workspace
 metadata:
   creationTimestamp: null
-  name: dept-1-workspace
+  name: batcave
   annotations:
     workspace.kommander.mesosphere.io/allow-existing-namespace: "true"
   labels:
     caren.nutanix.com/namespace-sync: ""
 spec:
-  namespaceName: dept-1-tenant-namespace
+  namespaceName: batcave
 status: {}
