--- a/clusters-kustomization.yaml
+++ b/clusters-kustomization.yaml
@@ -1,11 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-workspaces
+  name: clusterops-clusters
   namespace: kommander
 spec:
+  dependsOn:
+  - name: clusterops-workspaces
+    namespace: kommander
   interval: 5s
-  path: ./kustomizations/workspaces
+  path: ./kustomizations/clusters
   prune: true
   sourceRef:
    kind: GitRepository
