--- a/global-kustomization.yaml
+++ b/global-kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-workspaces
+  name: clusterops-global
   namespace: kommander
 spec:
   interval: 5s
-  path: ./kustomizations/workspaces
+  path: ./kustomizations/global
   prune: true
   sourceRef:
    kind: GitRepository
