--- a/workspace-applications-kustomization.yaml
+++ b/workspace-applications-kustomization.yaml
@@ -1,11 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-workspaces
+  name: clusterops-workspace-applications
   namespace: kommander
 spec:
+  dependsOn:
+  - name: clusterops-workspaces
+    namespace: kommander
   interval: 5s
-  path: ./kustomizations/workspaces
+  path: ./kustomizations/workspaces/applications
   prune: true
   sourceRef:
    kind: GitRepository
