--- a/resources/workspaces/kustomization.yaml
+++ b/resources/workspaces/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ./batcave/batcave.yaml
-- ./oscorp/oscorp.yaml
+  - ./batcave/batcave.yaml
+  - ./oscorp/oscorp.yaml
+  - ./dm-dev-workspace/dm-dev-workspace.yaml
