--- a/resources/workspaces/dm-dev-workspace/clusters/kustomization.yaml
+++ b/resources/workspaces/dm-dev-workspace/clusters/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-   - dm-nkp-workload-1.yaml.yaml
-   - dm-nkp-workload-1-sealed-secrets.yaml
-   - dm-nkp-workload-2.yaml.yaml
-   - dm-nkp-workload-2-sealed-secrets.yaml
+   - dm-nkp-workload-1.yaml
+   - dm-nkp-workload-1-selaed-secrets.yaml
+   - dm-nkp-workload-2.yaml
+   - dm-nkp-workload-2-selaed-secrets.yaml
