introducing preflight error to debug

--- a/resources/workspaces/batcave/clusters/kustomization.yaml
+++ b/resources/workspaces/batcave/clusters/kustomization.yaml
@@ -1,5 +1,20 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-   #Dummy configmap in case there is no cluster in the workspace namespace
-   - dummy-configmap.yaml
+#Dummy configmap in case there is no cluster in the workspace namespace
+- dummy-configmap.yaml
+- deploy-nkp-dragon-wld-1.yaml
+- deploy-nkp-dragon-wld-2.yaml
+patches:
+ - target:
+      group: cluster.x-k8s.io
+      version: v1beta1
+      kind: Cluster
+      name: nkp-dragon-wld-1
+   path: deploy-nkp-dragon-wld-1-pools.yaml
+ - target:
+      group: cluster.x-k8s.io
+      version: v1beta1
+      kind: Cluster
+      name: nkp-dragon-wld-2
+   path: deploy-nkp-dragon-wld-2-pools.yaml
