--- a/resources/workspaces/dm-dev-workspace/applications/ndk/ndk-2.0.0.yaml
+++ b/resources/workspaces/dm-dev-workspace/applications/ndk/ndk-2.0.0.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.kommander.d2iq.io/v1alpha3
 kind: AppDeployment
 metadata:
   name: ndk-2.0.0
-  namespace: dm-dev-project
+  namespace: dm-dev-workspace
   annotations:
     kustomize.toolkit.fluxcd.io/ssa: merge
     kustomize.toolkit.fluxcd.io/prune: disabled
