Fix: Split projects kustomization to avoid namespace race condition
Split the projects kustomization into two separate Flux Kustomizations:
1. clusterops-project-definitions - Creates Project resources (which trigger namespace creation)
2. clusterops-project-applications - Creates AppDeployments, ConfigMaps, etc. (depends on definitions)

This fixes the race condition where resources were being applied to dm-dev-project
namespace before the Project controller could create the namespace.

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - workspace-networkpolicies-kustomization.yaml
   - workspace-resourcequotas-kustomization.yaml
   - workspace-applications-kustomization.yaml
-  - projects-kustomization.yaml
+  - projects-definitions-kustomization.yaml
+  - projects-applications-kustomization.yaml
   - sealed-secrets-kustomization.yaml
   - clusters-kustomization.yaml
