--- a/projects-applications-kustomization.yaml
+++ b/projects-applications-kustomization.yaml
@@ -1,15 +1,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-projects
+  name: clusterops-project-applications
   namespace: dm-nkp-gitops
 spec:
   dependsOn:
-    - name: clusterops-workspaces
+    # Wait for project namespaces to be created by the Workspace controller
+    - name: clusterops-project-definitions
   interval: 5s
-  path: ./kustomizations/projects
+  retryInterval: 30s
+  path: ./kustomizations/project-applications
   prune: true
   sourceRef:
     kind: GitRepository
     name: gitops-demo
     namespace: kommander
+
