Refactor: Restructure to region-usa/az1/ parent-child hierarchy
- Renamed usa-az1/ to region-usa/az1/
- Supports cleaner multi-region multi-AZ structure:
  region-usa/
    az1/ (active)
    az2/ (future)
    az3/ (future)
  region-india/
    az1/ (future)
    az2/ (future)
    az3/ (future)

- Updated all paths in kustomization.yaml and flux-ks.yaml files
- Updated README with new structure

--- a/region-usa/az1/workspaces/dm-dev-workspace/projects/flux-ks.yaml
+++ b/region-usa/az1/workspaces/dm-dev-workspace/projects/flux-ks.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-clusters
+  name: clusterops-project-definitions
   namespace: dm-nkp-gitops
 spec:
   dependsOn:
     - name: clusterops-workspaces
   interval: 5s
-  path: ./usa-az1/workspaces/dm-dev-workspace/clusters
+  path: ./region-usa/az1/workspaces/dm-dev-workspace/projects
   prune: true
   sourceRef:
     kind: GitRepository
