--- a/region-usa/az1/workspaces/dm-dev-workspace/networkpolicies/flux-ks.yaml
+++ b/region-usa/az1/workspaces/dm-dev-workspace/networkpolicies/flux-ks.yaml
@@ -1,11 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-global
+  name: clusterops-workspace-networkpolicies
   namespace: dm-nkp-gitops
 spec:
+  dependsOn:
+    - name: clusterops-workspaces
   interval: 5s
-  path: ./usa-az1/global
+  path: ./region-usa/az1/workspaces/dm-dev-workspace/networkpolicies
   prune: true
   sourceRef:
     kind: GitRepository
