--- a/region-usa/az1/workspaces/flux-ks.yaml
+++ b/region-usa/az1/workspaces/flux-ks.yaml
@@ -1,13 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusterops-workspace-networkpolicies
+  name: clusterops-workspaces
   namespace: dm-nkp-gitops
 spec:
-  dependsOn:
-    - name: clusterops-workspaces
   interval: 5s
-  path: ./usa-az1/workspaces/dm-dev-workspace/networkpolicies
+  path: ./region-usa/az1/workspaces
   prune: true
   sourceRef:
     kind: GitRepository
