Add NDK image registry credentials SealedSecret
- Added ndk-image-registry-credentials SealedSecret for docker.io
- Updated ndk-2.0.0-config-overrides.yaml to reference the secret
- Updated kustomization.yaml to include the sealed secret

--- a/region-usa/az1/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/ndk-2.0.0-config-overrides.yaml
+++ b/region-usa/az1/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/ndk-2.0.0-config-overrides.yaml
@@ -6,4 +6,4 @@ metadata:
 data:
   values.yaml: |
     imageCredentials:
-      name: ndk-image-pull-secret
+      name: ndk-image-registry-credentials
