Add region/az specific bootstrap files and update README
- Add bootstrap.yaml and kustomization.yaml for each region+az:
  - region-usa/az1, az2, az3
  - region-india/az1, az2, az3
- Update root bootstrap.yaml with documentation
- Update root kustomization.yaml with better organization
- Update README.md with new structure and usage
- Update region-level README files

--- a/bootstrap.yaml
+++ b/bootstrap.yaml
@@ -1,9 +1,38 @@
-# Bootstrap manifest for NKP GitOps
-# Apply this once to bootstrap the GitOps workflow:
-#   kubectl apply -f https://raw.githubusercontent.com/deepak-muley/dm-gitops-dev/main/bootstrap.yaml
+# Bootstrap manifest for NKP GitOps - Multi-Region Multi-AZ
 #
-# Or:
-#   kubectl apply -f bootstrap.yaml
+# This is a reference bootstrap file. For production use, apply the
+# region+az specific bootstrap file for your management cluster.
+#
+# ┌─────────────────────────────────────────────────────────────────────────────┐
+# │  REGION-SPECIFIC BOOTSTRAP FILES                                            │
+# ├─────────────────────────────────────────────────────────────────────────────┤
+# │  USA Region:                                                                │
+# │    region-usa/az1/bootstrap.yaml  ← Active (dm-nkp-mgmt-1)                  │
+# │    region-usa/az2/bootstrap.yaml  ← Planned                                 │
+# │    region-usa/az3/bootstrap.yaml  ← Planned                                 │
+# │                                                                             │
+# │  India Region:                                                              │
+# │    region-india/az1/bootstrap.yaml  ← Planned                               │
+# │    region-india/az2/bootstrap.yaml  ← Planned                               │
+# │    region-india/az3/bootstrap.yaml  ← Planned                               │
+# └─────────────────────────────────────────────────────────────────────────────┘
+#
+# Usage Examples:
+#
+#   # Bootstrap USA AZ1 (currently active):
+#   kubectl apply -f https://raw.githubusercontent.com/deepak-muley/dm-gitops-dev/main/region-usa/az1/bootstrap.yaml
+#
+#   # Bootstrap India AZ1 (when ready):
+#   kubectl apply -f https://raw.githubusercontent.com/deepak-muley/dm-gitops-dev/main/region-india/az1/bootstrap.yaml
+#
+# Each bootstrap file creates:
+#   1. GitRepository - Points to this repo
+#   2. Kustomization - Points to the region/az specific path
+#
+# ─────────────────────────────────────────────────────────────────────────────
+# LEGACY: The manifests below bootstrap ALL regions/AZs from a single cluster.
+# This is NOT recommended for production. Use region+az specific bootstrap files.
+# ─────────────────────────────────────────────────────────────────────────────
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
@@ -11,10 +40,10 @@ metadata:
   name: gitops-demo
   namespace: kommander
 spec:
-  interval: 5s
+  interval: 5m
   ref:
     branch: main
-  timeout: 20s
+  timeout: 60s
   url: https://github.com/deepak-muley/dm-gitops-dev.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -23,12 +52,11 @@ metadata:
   name: clusterops-demo
   namespace: kommander
 spec:
-  interval: 5s
+  interval: 5m
   path: ./
   prune: true
   sourceRef:
     kind: GitRepository
     name: gitops-demo
     namespace: kommander
-
-
+  timeout: 3m
