--- a/region-usa/az1/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/kustomization.yaml
+++ b/region-usa/az1/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # NDK
   - ndk
+  # Nutanix AI dependencies (must be deployed before nutanix-ai)
+  - nutanix-ai-dependencies
+  # Nutanix AI
   - nutanix-ai
-
