--- a/region-usa/az2/bootstrap.yaml
+++ b/region-usa/az2/bootstrap.yaml
@@ -18,7 +18,7 @@ metadata:
   name: gitops-usa-az2
   namespace: kommander
 spec:
-  interval: 5m
+  interval: 1h
   ref:
     branch: main
   timeout: 60s
@@ -30,7 +30,7 @@ metadata:
   name: clusterops-usa-az2
   namespace: kommander
 spec:
-  interval: 5m
+  interval: 1h
   path: ./region-usa/az2
   prune: true
   sourceRef:
