Update docker-registry to use docker.io/library/registry:2.8.3 and fix helm repo URL

--- a/region-usa/az1/workspaces/dm-dev-workspace/applications/opensource-applications/docker-registry/helmrelease.yaml
+++ b/region-usa/az1/workspaces/dm-dev-workspace/applications/opensource-applications/docker-registry/helmrelease.yaml
@@ -27,7 +27,8 @@ spec:
   values:
     # Use the official registry image from Docker Hub
     image:
-      repository: registry
+      registry: docker.io
+      repository: library/registry
       tag: "2.8.3"
     # Service configuration
     service:
