Update podinfo AppDeployment to use podinfo-6.9.4

--- a/region-usa/az1/workspaces/dm-dev-workspace/applications/dm-nkp-gitops-catalog-applications/podinfo/podinfo.yaml
+++ b/region-usa/az1/workspaces/dm-dev-workspace/applications/dm-nkp-gitops-catalog-applications/podinfo/podinfo.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   appRef:
     kind: App
-    name: podinfo
+    name: podinfo-6.9.4
   clusterSelector:
     matchExpressions:
       - key: kommander.d2iq.io/cluster-name
