--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/overlays/2.17.0-rc1/dm-nkp-workload-2-patch.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/overlays/2.17.0-rc1/dm-nkp-workload-2-patch.yaml
@@ -50,6 +50,10 @@ spec:
     workers:
       machineDeployments:
         - class: default-worker
+          metadata:
+            annotations:
+              cluster.x-k8s.io/cluster-api-autoscaler-node-group-max-size: "3"
+              cluster.x-k8s.io/cluster-api-autoscaler-node-group-min-size: "3"
           name: md-0
           # replicas removed - using autoscaler annotations instead
           variables:
