fix: update sourceRef from gitops-demo to gitops-usa-az1 in all flux-ks.yaml files

--- a/region-usa/az1/management-cluster/global/flux-ks.yaml
+++ b/region-usa/az1/management-cluster/global/flux-ks.yaml
@@ -9,5 +9,5 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: gitops-demo
+    name: gitops-usa-az1
     namespace: kommander
