--- a/region-usa/az1/management-cluster/global/sealed-secrets-controller/flux-ks.yaml
+++ b/region-usa/az1/management-cluster/global/sealed-secrets-controller/flux-ks.yaml
@@ -9,6 +9,6 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: gitops-demo
+    name: gitops-usa-az1
     namespace: kommander
 
