--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/flux-ks.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/flux-ks.yaml
@@ -13,5 +13,5 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: gitops-demo
+    name: gitops-usa-az1
     namespace: kommander
