--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/projects/dm-dev-project/applications/flux-ks.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/projects/dm-dev-project/applications/flux-ks.yaml
@@ -15,5 +15,5 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: gitops-demo
+    name: gitops-usa-az1
     namespace: kommander
