Fix Gatekeeper policy ordering with separate Flux Kustomizations
Split into two Flux Kustomizations with dependency:
1. gatekeeper-constraint-templates - applies templates first
2. gatekeeper-constraints - depends on templates being ready

This ensures ConstraintTemplates are created before Constraints.

--- a/region-usa/az1/management-cluster/global/policies/gatekeeper/kustomization.yaml
+++ b/region-usa/az1/management-cluster/global/policies/gatekeeper/kustomization.yaml
@@ -1,10 +1,11 @@
 # Gatekeeper Policies - Main Kustomization
-# This aggregates all constraint templates and constraints
+# Uses separate Flux Kustomizations for proper ordering:
+# 1. Constraint Templates (must be created first)
+# 2. Constraints (depends on templates being ready)
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Constraint Templates must be applied BEFORE constraints
-  - constraint-templates
-  # Constraints that use the templates
-  - constraints
-
+  # Flux Kustomization for templates (applied first)
+  - flux-ks-templates.yaml
+  # Flux Kustomization for constraints (waits for templates)
+  - flux-ks-constraints.yaml
