Add missing registries to allowed-container-repos constraint
Added:
- velero/ - Velero backup tool (used by kommander)
- openpolicyagent/ - OPA Gatekeeper (used by kommander)
- mcr.microsoft.com/ - Microsoft Container Registry (Azure Service Operator)

--- a/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/image-security/allowed-repos.yaml
+++ b/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/image-security/allowed-repos.yaml
@@ -35,5 +35,12 @@ spec:
       - "mesosphere/"
       - "docker.io/mesosphere/"
 
+      # NKP Platform Components
+      - "velero/"                    # Velero backup tool (kommander)
+      - "openpolicyagent/"           # OPA Gatekeeper (kommander)
+      
+      # Cloud Provider Registries
+      - "mcr.microsoft.com/"         # Microsoft Container Registry (Azure)
+
       # Add your organization's private registries below
       # - "your-registry.example.com/"
