Add namespace exclusions to all constraints (Point 1)
Excluded namespaces (12 total):
- Pure Kubernetes: kube-system, kube-public, kube-node-lease
- Cluster API Core: capi-system, capi-kubeadm-bootstrap-system, capi-kubeadm-control-plane-system
- Non-Nutanix Providers: capa-system, capz-system, capg-system, capv-system, cappp-system, caaph-system

NOT excluded (for NKP evaluation):
- capx-system (Nutanix provider)
- caren-system (Nutanix runtime extensions)
- kommander, kommander-flux, cert-manager, etc.

Updated 20 constraint files.

--- a/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/image-security/block-latest-tag.yaml
+++ b/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/image-security/block-latest-tag.yaml
@@ -13,3 +13,17 @@ spec:
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
+    # Exclude pure K8s and non-Nutanix cloud providers
+    excludedNamespaces:
+      - kube-system
+      - kube-public
+      - kube-node-lease
+      - capi-system
+      - capi-kubeadm-bootstrap-system
+      - capi-kubeadm-control-plane-system
+      - capa-system
+      - capz-system
+      - capg-system
+      - capv-system
+      - cappp-system
+      - caaph-system
