--- a/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/network-security/block-loadbalancer.yaml
+++ b/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/network-security/block-loadbalancer.yaml
@@ -15,3 +15,17 @@ spec:
     kinds:
       - apiGroups: [""]
         kinds: ["Service"]
+    # Exclude pure K8s and non-Nutanix cloud providers
+    excludedNamespaces:
+      - kube-system
+      - kube-public
+      - kube-node-lease
+      - capi-system
+      - capi-kubeadm-bootstrap-system
+      - capi-kubeadm-control-plane-system
+      - capa-system
+      - capz-system
+      - capg-system
+      - capv-system
+      - cappp-system
+      - caaph-system
