--- a/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/rbac/block-wildcard-rbac.yaml
+++ b/region-usa/az1/management-cluster/global/policies/gatekeeper/constraints/rbac/block-wildcard-rbac.yaml
@@ -13,3 +13,17 @@ spec:
     kinds:
       - apiGroups: ["rbac.authorization.k8s.io"]
         kinds: ["Role", "ClusterRole"]
+    # Exclude pure K8s and non-Nutanix cloud providers
+    excludedNamespaces:
+      - kube-system
+      - kube-public
+      - kube-node-lease
+      - capi-system
+      - capi-kubeadm-bootstrap-system
+      - capi-kubeadm-control-plane-system
+      - capa-system
+      - capz-system
+      - capg-system
+      - capv-system
+      - cappp-system
+      - caaph-system
