feat: simplify NAI AppDeployment names and add namespace filter to check-violations.sh
- Remove version numbers from NAI AppDeployment names (nutanix-ai, kserve, envoy-gateway, opentelemetry-operator)
- Add -n/--namespace parameter to check-violations.sh for filtering violations by namespace
- Update scripts/README.md with comprehensive documentation for violation filtering

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai-dependencies/envoy-gateway-1.5.0.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai-dependencies/envoy-gateway-1.5.0.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps.kommander.d2iq.io/v1alpha3
 kind: AppDeployment
 metadata:
-  name: envoy-gateway-1.5.0
+  name: envoy-gateway
   namespace: dm-dev-workspace
   annotations:
     kustomize.toolkit.fluxcd.io/ssa: merge
