--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai-dependencies/opentelemetry-operator-0.93.0.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai-dependencies/opentelemetry-operator-0.93.0.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps.kommander.d2iq.io/v1alpha3
 kind: AppDeployment
 metadata:
-  name: opentelemetry-operator-0.93.0
+  name: opentelemetry-operator
   namespace: dm-dev-workspace
   annotations:
     kustomize.toolkit.fluxcd.io/ssa: merge
@@ -19,4 +19,3 @@ spec:
         values:
           - dm-nkp-workload-1
           - dm-nkp-workload-2
-
