--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/kubemark-infra/bases/kubemark-cluster.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/kubemark-infra/bases/kubemark-cluster.yaml
@@ -80,4 +80,4 @@ spec:
     spec:
       joinConfiguration:
         nodeRegistration:
-          name: '{{ ds.meta_data.local_hostname }}'
+          name: "{{ ds.meta_data.local_hostname }}"
