--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/bases/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/bases/kustomization.yaml
@@ -1,8 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-# Base resources are referenced directly from overlays to ensure patches are applied
-# Available resources in this folder:
-#   - dm-nkp-workload-1.yaml
-#   - dm-nkp-workload-1-sealed-secrets.yaml
-#   - dm-nkp-workload-2.yaml
-#   - dm-nkp-workload-2-sealed-secrets.yaml
+resources:
+  - dm-nkp-workload-1.yaml
+  - dm-nkp-workload-2.yaml
