--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/overlays/2.17.0/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/overlays/2.17.0/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../bases/dm-nkp-workload-1.yaml
-  - ../../bases/dm-nkp-workload-2.yaml
+  - ../../bases
   - ../../kubemark-hollow-machines
   # Sealed secrets are now applied via separate clusterops-sealed-secrets kustomization
 
