Add kyverno, vault, and kubescape-operator AppDeployments

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/dm-nkp-gitops-catalog-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/dm-nkp-gitops-catalog-applications/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Podinfo from dm-nkp-gitops-app-catalog
+  # Applications from dm-nkp-gitops-app-catalog
   - podinfo
+  - kyverno
+  - vault
+  - kubescape-operator
 
